test/files/neg/macro-divergence-controlled.check
Test_2.scala:2: error: could not find implicit value for parameter e: Complex[Foo]
  println(implicitly[Complex[Foo]])
                    ^
one error found
